c2/proofnumberscan
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/proofnumberscan/src/proof.c:1673:18: error: expected expression
v31 = *( _OWORD *)&v35->move.from; 
                 ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/proofnumberscan/src/proof.c:1673:10: error: use of undeclared identifier '_OWORD'
v31 = *( _OWORD *)&v35->move.from; 
         ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/proofnumberscan/src/proof.c:1675:12: error: expected expression
*( _OWORD *)&pn_move.from = v31; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/proofnumberscan/src/proof.c:1675:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&pn_move.from = v31; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/proofnumberscan/src/proof.c:1757:18: error: expected expression
v31 = *( _OWORD *)&dummy.from; 
                 ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/proofnumberscan/src/proof.c:1757:10: error: use of undeclared identifier '_OWORD'
v31 = *( _OWORD *)&dummy.from; 
         ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/proofnumberscan/src/proof.c:1784:14: error: passing 'char [8]' to parameter of incompatible type 'move_s'
comp_to_san( str, *v45); 
             ^~~
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/proofnumberscan/src/protos.h:119:26: note: passing argument to parameter 'move' here
void comp_to_san (move_s move, char str[]);
                         ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/proofnumberscan/src/proof.c:1820:14: error: passing 'char [8]' to parameter of incompatible type 'move_s'
comp_to_san( str, pn_move); 
             ^~~
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/proofnumberscan/src/protos.h:119:26: note: passing argument to parameter 'move' here
void comp_to_san (move_s move, char str[]);
                         ^
8 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/proofnumberscan/src/obj/proof.o] Error 1
